--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 
     <h1>én vagyok</h1>
     <p>jol vagyok</p>
+    <p></p>
+    a portfolio elengethetetlen a szabadúszó munkak megszerzesehez.
+    <p></p>
 </body>
 </html>
