nagyon fontos változás

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>én vagyok</h1>
     <p>jol vagyok</p>
     <p></p>
-    a portfolio elengethetetlen a szabadúszó, munkak megszerzesehez.
+    a portfolio elengethetetlen a szabad, munkak megszerzesehez.
     <p></p>
 </body>
 </html>
