linkek egyes oldalak között

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <p></p>
     a portfolio elengethetetlen a szabadúszó, munkak megszerzesehez.18
     <p></p>
+    <p><a href="about.html">Rólunk</a></p>
 </body>
 </html>
